[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Characters/Main_Character_Animation.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scenes_BackGrounds/Hall_BackGround.jpeg" type="Texture" id=2]
[ext_resource path="res://Scenes/Portal.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Lives.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Top_Level/Hall_Scene2.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 573.259, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 530.219, 11.1581 )

[sub_resource type="CircleShape2D" id=3]
radius = 6.56756

[sub_resource type="CapsuleShape2D" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512.175, 298.844 )
scale = Vector2( 0.799929, 1.64359 )
texture = ExtResource( 2 )

[node name="Main_Character_Animation" parent="." instance=ExtResource( 1 )]
position = Vector2( 295.943, 434.599 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 508.082, 608.467 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 519.088, 283.482 )
shape = SubResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 5.82709, -185.936 )
polygon = PoolVector2Array( 993.885, 451.497, 1023.02, 572.276, 1019.38, 784.539, 1017.97, 566.75, 923.431, 481.692 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -2799.13, -73.1032 )
scale = Vector2( 20.1212, 1 )
polygon = PoolVector2Array( 147.176, 378.471, 147.176, 411.174, 139.5, 410, 141.5, 376.5 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 1.54691, 594.251, 6.79099, 356.02, 33.7605, 350.027, 96.6894, 305.078, 0.0486145, 305.078 )

[node name="Portal" parent="." instance=ExtResource( 3 )]
position = Vector2( -835, 9 )
next_scene_path = "res://Scenes/Low_Level/Entry_Scene.tscn"
player_spawn_location = Vector2( 525, 325 )

[node name="Portal2" parent="." instance=ExtResource( 3 )]
position = Vector2( -544, -136 )
next_scene_path = "res://Scenes/Top_Level/Room_Scene.tscn"
player_spawn_location = Vector2( 850, 305 )

[node name="Lives" parent="." instance=ExtResource( 4 )]

[node name="Dialog" type="Label" parent="."]
margin_left = 414.89
margin_top = 554.813
margin_right = 598.89
margin_bottom = 602.813
text = "I always hate this picture.
"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Picture" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Picture"]
position = Vector2( 511.028, 303.836 )
shape = SubResource( 3 )

[node name="HideDialog" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Door" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2( 970.428, 371.085 )
shape = SubResource( 4 )

[connection signal="body_entered" from="Picture" to="." method="_on_Picture_body_entered"]
[connection signal="timeout" from="HideDialog" to="." method="_on_HideDialog_timeout"]
[connection signal="body_entered" from="Door" to="." method="_on_Door_body_entered"]
